# v3_tts_bug_finder

./: .gitignore  AGENTS.md  README.md  paralingustic_prompt.json  paralingustic_prompt.srt  paralingustic_prompt.tsv  paralingustic_prompt.txt  paralingustic_prompt.vtt  pyproject.toml
scripts/: long_run_macos_whisper.sh
skills/tts-bug-finder-polyphone/: SKILL.md
tests/: test_dedupe.py  test_extract.py  test_metrics.py
tts_bug_finder/: cli.py  db.py  dedupe.py  exporter.py  kimi_cli.py  metrics.py  mutators.py  report_html.py  runner.py  scoring.py  seeds.py  text_utils.py  types.py  zh_normalize.py
tts_bug_finder/adapters/: __init__.py  base.py  dummy.py  http_api.py  macos_say.py  qwen3_tts.py  whisper_cli.py
