[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tts-bug-finder"
version = "0.1.0"
description = "TTS→ASR bug finder demo (CLI first)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "opencc-python-reimplemented>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["tts_bug_finder*"]
